--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <main>
         <section class="robotron">
-            <img class="robo" src="img/robotron.png" alt="Robotron" id="robotron">
+            <img class="robo" src="img/Robotron_2000_Vermelho/robotron.png" alt="Robotron" id="robotron" data-pasta="img/Robotron_2000_">
             <figcaption class="titulo">ROBOTRON <br>2000</figcaption>
         </section>
 
